--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<meta charset="ISO-8859-1">
+	<meta charset="UTF-8">
 	<title>Atomicz</title>
 	<link rel="stylesheet" href="style/index_style.css" type="text/css" />
 	<link rel="shortcut icon" type="image/png" href="style/image/atomicz_icon_dark.png"/>
@@ -23,7 +23,7 @@
 				</li>
 				<li class="navbar-link"><a href="">Home</a></li>
 				<li class="navbar-link"><a href="">Produtos</a></li>
-				<li class="navbar-link"><a href="">Sobre nós</a></li>
+				<li class="navbar-link"><a href="">Sobre nÃ³s</a></li>
 				<li class="navbar-link"><a href="">Contato</a></li>
 			</ul>
 		</div>
@@ -31,7 +31,7 @@
 		
 		<div id="main-content">
 			<div id="main-header">
-				<span>FAÇA MAIS COM CLIMB, MUITO MAIS.</span>
+				<span>FAÃ‡A MAIS COM CLIMB, MUITO MAIS.</span>
 			</div>
 			<div id="main-animation-intro-wrapper">
 				<canvas id="main-animation-intro" width="700" height="400">
