--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<meta charset="UTF-8">
+	<meta charset="utf-8">
 	<title>Atomicz</title>
 	<link rel="stylesheet" href="style/index_style.css" type="text/css" />
 	<link rel="shortcut icon" type="image/png" href="style/image/atomicz_icon_dark.png"/>
