--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Atomicz</title>
 	<link rel="stylesheet" href="style/index_style.css" type="text/css" />
 	<link rel="shortcut icon" type="image/png" href="style/image/atomicz_icon_dark.png"/>
-	<script src="javascript/home_intro.js"></script>
+	<script src="javascript/home_animation.js"></script>
 	<script type="text/javascript">
 		window.onload = function() {
 			startIntroAnimation();
