little responsive changes

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<title>Atomicz</title>
+	<meta name="viewport" content="width=device-width, initial-scale=0.7, maximum-scale=1">
 	<link rel="stylesheet" href="style/index_style.css" type="text/css" />
 	<link rel="shortcut icon" type="image/png" href="style/image/atomicz_icon_dark.png"/>
 	<script src="javascript/lib/consoleCNV.js"></script>
@@ -81,8 +82,8 @@
 			<div id="main-header">
 				<span>FAÇA MAIS COM CLIMB, MUITO MAIS.</span>
 			</div>
-			<div id="main-animation-intro-wrapper">
-				<canvas id="main-animation" width="700" height="400">
+			<div id="main-animation-wrapper">
+				<canvas id="main-animation" width="700" height="500">
 					Sorry, your browser does not support Canvas =/
 				</canvas>
 			</div>
